<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/back_button_height"
            android:text="@string/back"
            android:id="@+id/btn_settings_back"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_header"
            android:textAlignment="center"
            android:id="@+id/label_header_settings"
            android:textSize="36dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

    <Space
            android:id="@+id/settings_space"
            android:layout_width="@dimen/settings_space_after_header"
            android:layout_height="@dimen/settings_space_after_header"
            android:layout_below="@+id/label_header_settings" />

    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_switch_sound"
            android:id="@+id/switch_sound_settings"
            android:layout_below="@+id/settings_space"
            android:layout_centerHorizontal="true"/>

    <Switch android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_switch_music"
            android:id="@+id/switch_music_settings"
            android:layout_below="@+id/switch_sound_settings"
            android:layout_centerHorizontal="true"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_btn_account"
            android:id="@+id/btn_switch_account_settings"
            android:layout_below="@+id/switch_music_settings"
            android:layout_centerHorizontal="true"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_btn_share"
            android:id="@+id/btn_share_settings"
            android:layout_below="@+id/btn_switch_account_settings"
            android:layout_centerHorizontal="true"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_btn_achievements"
            android:id="@+id/btn_achievements_settings"
            android:layout_below="@+id/btn_share_settings"
            android:layout_centerHorizontal="true"/>

</RelativeLayout>

